[package]
name = "warp-postgres-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# async 
tokio = { version = "1.15.0", features = ["macros"] }

# serialization
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

# web
warp = "0.3.2"

# database
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
mobc = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }

# error handling
thiserror = "1.0"

# env variables
itconfig = { version = "1.1.1", features = ["macro"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
version = "1"
